# seatscout

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/seatscout/: __init__.py  cli.py  engine.py  mcp_server.py  models.py  scoring.py
src/seatscout/providers/: __init__.py  amc.py  base.py
tests/: test_amc_parsing.py  test_engine.py  test_live_amc.py  test_scoring.py
